--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_API=http://localhost:8001/api
+VITE_PAYMENT_API=http://localhost:9093
 VITE_APP_HOST=http://localhost:5173
 
 VITE_APP_BUCKET_S3=https://arquivos-jobbgestor.s3.amazonaws.com
